--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>UnitTesting</name>
   <description>Assignment SEIP</description>
-  
   	<dependencies>
   		<dependency>
   			<groupId>org.jfree</groupId>
@@ -24,4 +23,32 @@
 			<version>2.16.0</version>
 		</dependency>
 	</dependencies>
+	<build>
+	<plugins>
+		<plugin>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.8.1</version>
+			<configuration>
+				<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
+				<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
+			</configuration>
+			<executions>
+				<execution>
+					<id>jacoco-initialize</id>
+					<goals>
+						<goal>prepare-agent</goal>
+					</goals>
+				</execution>
+				<execution>
+					<id>jacoco-site</id>
+					<phase>package</phase>
+					<goals>
+						<goal>report</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>
+</build>
 </project>
